widget_derive/tests/ui/declare_builder_fail.stderr
error: the identify `margin` is reserved to expand space around widget wrapped.
 --> $DIR/declare_builder_fail.rs:7:3
  |
7 |   margin: i32,
  |   ^^^^^^
  |
  = help: rename it in builder to ignore the conflict
          ```
          #[rename = "xxx"]
          margin : i32
          ```
